--- a/icomoon/icomoon.css
+++ b/icomoon/icomoon.css
@@ -21,3 +21,28 @@
   float: right;
   padding-right: 15px;
 }
+
+.icon-blue {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  float: right;
+  color: #0275d8;
+}
+
+.icon-blue-left {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  color: #0275d8;
+}
