--- a/icomoon/icomoon.css
+++ b/icomoon/icomoon.css
@@ -17,10 +17,23 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
   float: right;
   padding-right: 15px;
 }
+
+/*.icon-subsection {
+  /* use !important to prevent issues with browser extensions that change fonts
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  font-size: 20px;
+  text-transform: none;
+  color: #0275d8;
+  float: right;
+  padding-right: 10px;
+}*/
 
 .icon-blue {
   /* use !important to prevent issues with browser extensions that change fonts */
@@ -30,7 +43,6 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
   float: right;
   color: #0275d8;
 }
@@ -43,6 +55,6 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
   color: #0275d8;
+  padding-right: 3px;
 }
