--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,9 +2,11 @@
 
 body {
 	background-color: #fff;
-	padding: 3%;
-	padding-top: 3%;
-	padding-bottom: 3%;
+	color:inherit;
+	padding-top: 70px;
+	padding-left: 5%;
+	padding-right: 5%;
+	padding-bottom: 50px;
 }
 
 .container {
@@ -15,24 +17,28 @@ body {
 
 .navbar-default {
 	background-color: #0275d8;
+	color:inherit;
 }
 
 .navbar-default .navbar-brand {
 	color: #fff;
+	background-color: inherit;
 }
 
 .navbar-default .navbar-text {
 	color: #fff;
+	background-color: inherit;
 }
 
 .navbar-default .navbar-nav>li>a {
 	color: #fff;
+	background-color: inherit;
 }
 
 .navbar-brand {
 	font-weight: 400;
 	font-size: 30px;
-	padding-left: 30px;
+	padding-left: 15px;
 	line-height: none;
 }
 
@@ -46,6 +52,7 @@ body {
 
 .navbar-default .navbar-toggle .icon-bar {
 	background-color: #ffffff;
+	color: inherit;
 }
 
 .small, small {
@@ -55,6 +62,12 @@ body {
 .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
 	color: #FFEB3B;
 	background-color: transparent;
+}
+
+.navbar.navbar-default.navbar-fixed-top {
+	margin-left: 5%;
+	margin-right: 5%;
+	border-radius: 4px;
 }
 
 /*table.table.table-condensed {
@@ -81,9 +94,48 @@ border: 1px solid #0275d8;
 	border-radius: 50%;
 	float:left;
 	margin: 10px 0px 10px 0px;
-	-webkit-box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.6);
-	-moz-box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.6);
 	box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.6);
+}
+
+#fotojumbo {
+	width: 120px;
+	border-radius: 50%;
+	margin: 0px 0px 0px 0px;
+	box-shadow: 4px 4px 8px 0px rgba(0,0,0,0.6);
+}
+
+.container .jumbotron, .container-fluid .jumbotron {
+    padding: 20px 20px 20px 20px;
+		border-radius: 4px;
+}
+
+.left.carousel-control {
+	border-radius: 4px;
+}
+
+.right.carousel-control {
+	border-radius: 4px;
+}
+
+.glyphicon-search:before {
+    content: "\e003";
+		color: #0275d8;
+		background-color: inherit;
+}
+
+#QR {
+	width: 150px;
+}
+
+.storeicon {
+	width: 100px;
+	margin-left: 5px;
+	margin-top: 7px;
+}
+
+.appicon {
+	width: 70px;
+	margin-top: 10px;
 }
 
 #aficiones {
@@ -91,9 +143,21 @@ border: 1px solid #0275d8;
 	padding-top: 3px;
 }
 
-h1 {
+.jumbotron .h1, .jumbotron h1 {
+	font-family: 'Noto Sans', sans-serif;
+  font-size: 40px;
+	color: #0275d8;
+	background-color: inherit;
+}
+
+.jumbotron p {
+	font-family: 'Noto Sans', sans-serif;
+	color: #0275d8;
+	background-color: inherit;
+}
+
+/*h1 {
 	margin: 0px;
-	margin-top: 0px;
 	padding: 10px;
 	overflow: auto;
 	font-style: normal;
@@ -103,12 +167,11 @@ h1 {
 	color: white;
 	background-color: #0275d8;
 	border-radius: 4px;
-}
+}*/
 
 h2 {
 	margin: 0px;
 	padding: 5px 0px 5px 15px;
-	padding-left: 15px;
 	overflow: auto;
 	font-style: normal;
 	font-weight: normal;
@@ -131,12 +194,13 @@ text-align: right;
 border-bottom: 1px solid #0275d8;
 }*/
 
-p  {
+/*p  {
 	font-style: normal;
 	font-weight: normal;
 	font-size: 25px;
 	font-family: 'Noto Sans', sans-serif;
 	color: #ffffff;
+	background-color: inherit;
 	text-decoration: none;
 	letter-spacing: 0px;
 	word-spacing: 0px;
@@ -145,37 +209,38 @@ p  {
 	margin-top: 40px;
 	padding-bottom: 0px;
 	width: 800px;
-}
+}*/
 
 a {
 	font-family: 'Noto Sans', sans-serif;
 	color: blue;
+	background-color: inherit;
 	text-decoration: none;
 	opacity: 1;
-	-webkit-transition-property: color, border-bottom;
-	-webkit-transition-duration: 1s, 1s;
 }
 
 .icon-link {
 	font-family: 'Noto Sans', sans-serif;
 	color: #fff;
+	background-color: inherit;
 	text-decoration: none;
 	opacity: 1;
-	-webkit-transition-property: color, border-bottom;
-	-webkit-transition-duration: 1s, 1s;
 }
 
 .icon-link:visited {
 	color: #fff;
+	background-color: inherit;
 }
 
 .icon-link:hover {
 	color: #FFEB3B;
+	background-color: inherit;
 	text-decoration: none;
 	opacity: 1;
 }
 .icon-link:active {
 	color: #FFEB3B;
+	background-color: inherit;
 }
 
 .dropup {
@@ -185,12 +250,22 @@ a {
 
 .goup-link {
 	color: #fff;
+	background-color: inherit;
 }
 
 .goup-link:hover {
 	color: #FFEB3B;
+	background-color: inherit;
 }
 
 .goup-link:visited {
 	color: #fff;
+	background-color: inherit;
+}
+
+.anchor {
+    display: block;
+    position: relative;
+    top: -70px;
+    visibility: hidden;
 }
