--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?dw7ck8');
-  src:  url('fonts/icomoon.eot?dw7ck8#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?dw7ck8') format('truetype'),
-    url('fonts/icomoon.woff?dw7ck8') format('woff'),
-    url('fonts/icomoon.svg?dw7ck8#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?2i7bcc');
+  src:  url('fonts/icomoon.eot?2i7bcc#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2i7bcc') format('truetype'),
+    url('fonts/icomoon.woff?2i7bcc') format('woff'),
+    url('fonts/icomoon.svg?2i7bcc#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-qrcode:before {
+  content: "\e938";
+}
 .icon-map:before {
   content: "\e933";
 }
