Validación W3C y descripciones en Carousel

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -117,6 +117,35 @@ border: 1px solid #0275d8;
 	border-radius: 4px;
 }
 
+.carousel-indicators {
+  bottom: 0px;
+}
+
+.carousel-indicators li {
+  border: 1px solid #0275d8;
+}
+
+.carousel-indicators .active {
+    background-color: #0275d8;
+		color: inherit;
+}
+
+.carousel-caption {
+    padding-bottom: 15px;
+    color: black;
+		background-color: inherit;
+}
+
+.glyphicon-chevron-left:before {
+	color: #0275d8;
+	background-color: inherit;
+}
+
+.glyphicon-chevron-right:before {
+	color: #0275d8;
+	background-color: inherit;
+}
+
 .glyphicon-search:before {
     content: "\e003";
 		color: #0275d8;
