--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -132,7 +132,7 @@ border: 1px solid #0275d8;
 
 .carousel-caption {
     padding-bottom: 15px;
-    color: black;
+    color: #424242;
 		background-color: inherit;
 }
 
