--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?2i7bcc');
-  src:  url('fonts/icomoon.eot?2i7bcc#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?2i7bcc') format('truetype'),
-    url('fonts/icomoon.woff?2i7bcc') format('woff'),
-    url('fonts/icomoon.svg?2i7bcc#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?yd1vww');
+  src:  url('fonts/icomoon.eot?yd1vww#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?yd1vww') format('truetype'),
+    url('fonts/icomoon.woff?yd1vww') format('woff'),
+    url('fonts/icomoon.svg?yd1vww#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,8 +24,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-qrcode:before {
-  content: "\e938";
+.icon-images:before {
+  content: "\e936";
+}
+.icon-folder-images:before {
+  content: "\e935";
 }
 .icon-map:before {
   content: "\e933";
@@ -185,5 +188,8 @@
 }
 .icon-twitter:before {
   content: "\e932";
+}
+.icon-qrcode:before {
+  content: "\e938";
 }
 
