--- a/icomoon/icomoon.css
+++ b/icomoon/icomoon.css
@@ -1,12 +1,27 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?afg083');
-  src:  url('fonts/icomoon.eot?afg083#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?afg083') format('truetype'),
-    url('fonts/icomoon.woff?afg083') format('woff'),
-    url('fonts/icomoon.svg?afg083#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?yd1vww');
+  src:  url('fonts/icomoon.eot?yd1vww#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?yd1vww') format('truetype'),
+    url('fonts/icomoon.woff?yd1vww') format('woff'),
+    url('fonts/icomoon.svg?yd1vww#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
+}
+
+.icon {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /*.icon-subsection {
@@ -23,6 +38,14 @@
   padding-right: 10px;
 }*/
 
+.icon-images:before {
+  content: "\e936";
+  padding-left: 10px;
+}
+.icon-folder-images:before {
+  content: "\e935";
+  padding-left: 10px;
+}
 .icon-qrcode:before {
   font-family: 'icomoon' !important;
   content: "\e938";
