--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,6 +9,27 @@ body {
 	padding-bottom: 50px;
 }
 
+@media screen and (max-width: 768px) {
+	#mynamenavbar {
+		font-size: 20px;
+	}
+	#minombre {
+		font-size: 23px;
+		text-align: center;
+	}
+	#jumboparagraph {
+		font-size: 16px;
+		text-align: center;
+	}
+	#btnjumbo {
+		margin-top: 0px;
+	}
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a {
+		color: #fff;
+		background-color: inherit;
+	}
+}
+
 .container {
 	width: 100%;
 	padding-left: 0px;
@@ -42,21 +63,17 @@ body {
 	line-height: none;
 }
 
-.dropdown {
-	margin-right: 30px;
+/*.dropdown {
+margin-right: 30px;
 }
 
 .navbar-toggle.collapsed, .navbar-toggle {
-	margin-right: 30px;
-}
+margin-right: 30px;
+}*/
 
 .navbar-default .navbar-toggle .icon-bar {
 	background-color: #ffffff;
 	color: inherit;
-}
-
-.small, small {
-	font-size: 70%;
 }
 
 .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
@@ -105,13 +122,14 @@ border: 1px solid #0275d8;
 }
 
 .btn.btn-info {
+	color:#fff;
 	background-color: #0275d8;
 	margin-top: 43.2px;
 }
 
 .container .jumbotron, .container-fluid .jumbotron {
-    padding: 20px 20px 20px 20px;
-		border-radius: 4px;
+	padding: 20px 20px 20px 20px;
+	border-radius: 4px;
 }
 
 .left.carousel-control {
@@ -123,22 +141,22 @@ border: 1px solid #0275d8;
 }
 
 .carousel-indicators {
-  bottom: 0px;
+	bottom: 0px;
 }
 
 .carousel-indicators li {
-  border: 1px solid #0275d8;
+	border: 1px solid #0275d8;
 }
 
 .carousel-indicators .active {
-    background-color: #0275d8;
-		color: inherit;
+	background-color: #0275d8;
+	color: inherit;
 }
 
 .carousel-caption {
-    padding-bottom: 15px;
-    color: #424242;
-		background-color: inherit;
+	padding-bottom: 15px;
+	color: #424242;
+	background-color: inherit;
 }
 
 .glyphicon-chevron-left:before {
@@ -152,9 +170,9 @@ border: 1px solid #0275d8;
 }
 
 .glyphicon-search:before {
-    content: "\e003";
-		color: #0275d8;
-		background-color: inherit;
+	content: "\e003";
+	color: #0275d8;
+	background-color: inherit;
 }
 
 #QR {
@@ -179,7 +197,7 @@ border: 1px solid #0275d8;
 
 .jumbotron .h1, .jumbotron h1 {
 	font-family: 'Noto Sans', sans-serif;
-  font-size: 40px;
+	font-size: 40px;
 	color: #0275d8;
 	background-color: inherit;
 }
@@ -191,16 +209,16 @@ border: 1px solid #0275d8;
 }
 
 /*h1 {
-	margin: 0px;
-	padding: 10px;
-	overflow: auto;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 30px;
-	font-family: 'Noto Sans', sans-serif;
-	color: white;
-	background-color: #0275d8;
-	border-radius: 4px;
+margin: 0px;
+padding: 10px;
+overflow: auto;
+font-style: normal;
+font-weight: 400;
+font-size: 30px;
+font-family: 'Noto Sans', sans-serif;
+color: white;
+background-color: #0275d8;
+border-radius: 4px;
 }*/
 
 h2 {
@@ -229,20 +247,20 @@ border-bottom: 1px solid #0275d8;
 }*/
 
 /*p  {
-	font-style: normal;
-	font-weight: normal;
-	font-size: 25px;
-	font-family: 'Noto Sans', sans-serif;
-	color: #ffffff;
-	background-color: inherit;
-	text-decoration: none;
-	letter-spacing: 0px;
-	word-spacing: 0px;
-	line-height: 150%;
-	text-indent: 0px;
-	margin-top: 40px;
-	padding-bottom: 0px;
-	width: 800px;
+font-style: normal;
+font-weight: normal;
+font-size: 25px;
+font-family: 'Noto Sans', sans-serif;
+color: #ffffff;
+background-color: inherit;
+text-decoration: none;
+letter-spacing: 0px;
+word-spacing: 0px;
+line-height: 150%;
+text-indent: 0px;
+margin-top: 40px;
+padding-bottom: 0px;
+width: 800px;
 }*/
 
 a {
@@ -298,8 +316,15 @@ a {
 }
 
 .anchor {
-    display: block;
-    position: relative;
-    top: -70px;
-    visibility: hidden;
+	display: block;
+	position: relative;
+	top: -70px;
+	visibility: hidden;
+}
+
+.anchor2 {
+	display: block;
+	position: relative;
+	top: -120px;
+	visibility: hidden;
 }
