--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,10 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+	.container-fluid{
+		padding-left: 10px;
+		padding-right: 10px;
+	}
 	#mynamenavbar {
 		font-size: 20px;
 	}
