--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,7 +6,7 @@ body {
 	padding-top: 70px;
 	padding-left: 5%;
 	padding-right: 5%;
-	padding-bottom: 50px;
+	padding-bottom: 10px;
 }
 
 @media screen and (max-width: 768px) {
@@ -31,6 +31,12 @@ body {
 	.navbar-default .navbar-nav .open .dropdown-menu>li>a {
 		color: #fff;
 		background-color: inherit;
+	}
+}
+
+@media screen and (max-width: 737px) {
+	#Experiencia, #FormacionAcademica, #FormacionComplementaria, #Habilidades, #Otros {
+		top: -120px;
 	}
 }
 
@@ -323,12 +329,5 @@ a {
 	display: block;
 	position: relative;
 	top: -70px;
-	visibility: hidden;
-}
-
-.anchor2 {
-	display: block;
-	position: relative;
-	top: -120px;
 	visibility: hidden;
 }
