Enlaces en las barras y nuevos iconos de validación

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -309,6 +309,16 @@ a {
 	background-color: inherit;
 }
 
+.barlink {
+	color: #fff;
+	background-color: inherit;
+}
+
+.barlink:visited {
+	color: #fff;
+	background-color: inherit;
+}
+
 .dropup {
 	float: right;
 	padding-right: 15px;
